# pseudoscience-bot

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  docker-compose.yml
src/: commands.rs  event.rs  fun_commands.rs  git.rs  main.rs  utils.rs
src/commands/: custom.rs  dev.rs  git.rs  packwiz.rs
